objects/Account_Executive_Sponsor__c.object
<CustomObject>
    <fields>
        <fullName>Account_Leads_CEC__c</fullName>
        <label>Account Team Leader CEC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Leads__c</fullName>
        <label>Account Team Leader Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account Name External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Source__c</fullName>
        <description>Account Source</description>
        <label>Account Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CEGM_Account__c</fullName>
        <description>Country Global Enterprise Model Account?</description>
        <label>CEGM Account?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_Changes__c</fullName>
        <description>Comments/Changes  (Hidden access given thru perm set)</description>
        <label>Comments/Changes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>HQ Country (From Country)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Pipe_Rank__c</fullName>
        <description>Current Pipe Rank</description>
        <label>Current Pipe Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Common_Name__c</fullName>
        <description>Customer Common Name</description>
        <label>Customer Common Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsorship_Program__c</fullName>
        <description>Does the record belongs to Executive Sponsorship Program?</description>
        <label>Executive Sponsorship Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographic_Region__c</fullName>
        <label>HQ Geo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_100_Account__c</fullName>
        <description>Is the Account Global 100?</description>
        <label>Global 100 Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <label>Supergroup ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_m_VP_Lead_Sponsor__c</fullName>
        <description>I'm VP/Lead/Sponsor</description>
        <formula>IF(CONTAINS( UPPER(Leads_and_Sponsors_CEC__c) , UPPER($User.Alias)), 'Yes', 'No')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I'm VP/Lead/Sponsor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Sponsors_CEC__c</fullName>
        <label>Account Sponsor CEC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Sponsors__c</fullName>
        <label>Account Sponsor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads_and_Sponsors_CEC__c</fullName>
        <description>Leads and Sponsors</description>
        <formula>Account_Leads_CEC__c + ' ' +
Lead_Sponsors_CEC__c  + ' ' +
Supporting_Sponsors_CEC__c  + ' ' +
VP_CEC__c</formula>
        <label>Leads and Sponsors CEC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominated_Sponsor__c</fullName>
        <description>Nominated Sponsor</description>
        <label>Nominated Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomination_Reason_as_Business_Advocate__c</fullName>
        <description>Explain how your Executive Sponsor has acted as a business advocate and advisor to the customer by aligning resources to drive growth and business transformation.</description>
        <inlineHelpText>Explain how your Executive Sponsor has acted as a business advocate and advisor to the customer by aligning resources to drive growth and business transformation.</inlineHelpText>
        <label>Nomination Reason as Business Advocate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nomination_Reason_as_Customer_Insight__c</fullName>
        <description>Demonstrate how your Executive Sponsor has gained greater insight into the customer’s business and their strategic requirements of Cisco for future investments.</description>
        <inlineHelpText>Demonstrate how your Executive Sponsor has gained greater insight into the customer’s business and their strategic requirements of Cisco for future investments.</inlineHelpText>
        <label>Nomination Reason as Customer Insight</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nomination_Reason_as_Influencer__c</fullName>
        <description>Describe the influence your Executive Sponsor has had on building stronger business relationships with the customer resulting in increased business relevance.</description>
        <inlineHelpText>Describe the influence your Executive Sponsor has had on building stronger business relationships with the customer resulting in increased business relevance.</inlineHelpText>
        <label>Nomination Reason as Influencer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nomination_Year__c</fullName>
        <description>Nomination Year</description>
        <label>Nomination Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OD_Director_CEC__c</fullName>
        <label>OD (Director) CEC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OD_Director__c</fullName>
        <label>OD (Director)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Bookings_Ranking__c</fullName>
        <description>Previous Bookings Ranking</description>
        <label>Previous Bookings Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Sponsor_Details__c</fullName>
        <description>Previous Sponsor Details</description>
        <label>Previous Sponsor Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Sponsor__c</fullName>
        <description>Proposed Sponsor (Hidden access given thru perm set)</description>
        <label>Proposed Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Regional_Manager_CEC__c</fullName>
        <description>RM (Regional Manager)</description>
        <label>RM (Regional Manager) CEC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Regional_Manager__c</fullName>
        <description>RM (Regional Manager)</description>
        <label>RM (Regional Manager)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_Status__c</fullName>
        <description>Sponsor Status (Hidden access given thru perm set)</description>
        <label>Sponsor Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Backfill Sponsor that has been removed</fullName>
                </value>
                <value>
                    <fullName>Confirmed Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Country Sponsor</fullName>
                </value>
                <value>
                    <fullName>Emailed Proposed Sponsor</fullName>
                </value>
                <value>
                    <fullName>Hold-No Sponsor Needed at this time</fullName>
                </value>
                <value>
                    <fullName>Interview Conducted-Need to Formalize</fullName>
                </value>
                <value>
                    <fullName>Met with Account Team-Need IAP</fullName>
                </value>
                <value>
                    <fullName>Need to Email Proposed Sponsor</fullName>
                </value>
                <value>
                    <fullName>No Sponsor</fullName>
                </value>
                <value>
                    <fullName>No Sponsor-Priority</fullName>
                </value>
                <value>
                    <fullName>Reassess Current Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Scheduled Interview with Account and Sponsor</fullName>
                </value>
                <value>
                    <fullName>Scheduled Meeting with Account Team</fullName>
                </value>
                <value>
                    <fullName>See Notes</fullName>
                </value>
                <value>
                    <fullName>Sponsor Interested-Email Account Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Vertical__c</fullName>
        <label>Sub Vertical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Group__c</fullName>
        <label>Super Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supporting_Sponsors_CEC__c</fullName>
        <label>Supporting Sponsors CEC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supporting_Sponsors__c</fullName>
        <label>Supporting Sponsors</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_CEC__c</fullName>
        <label>VP CEC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP__c</fullName>
        <label>VP(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Account Executive Sponsor</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Executive Sponsors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>CEGM</fullName>
        <columns>NAME</columns>
        <columns>ID__c</columns>
        <columns>Account_Leads__c</columns>
        <columns>VP__c</columns>
        <columns>Lead_Sponsors__c</columns>
        <columns>Supporting_Sponsors__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CEGM_Account__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>CEGM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>NAME</columns>
        <columns>ID__c</columns>
        <columns>Account_Leads__c</columns>
        <columns>VP__c</columns>
        <columns>Lead_Sponsors__c</columns>
        <columns>Supporting_Sponsors__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>I_m_VP_Lead_Sponsor__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Executive_Sponsorship_Program__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Others_All_Accounts</fullName>
        <columns>NAME</columns>
        <columns>ID__c</columns>
        <columns>Account_Leads__c</columns>
        <columns>VP__c</columns>
        <columns>Lead_Sponsors__c</columns>
        <columns>Supporting_Sponsors__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Executive_Sponsorship_Program__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Others (All Accounts)</label>
        <language>en_US</language>
    </listViews>
</CustomObject>